# Intro-Python-I

./: .bashrc  .foo.js.swo  .foo.js.swp  .gitignore  .hello.py.swn  .hello.py.swo  .hello.py.swp  00_hello.py  02_datatypes.py  03_modules.py  04_printing.py  05_lists.py  06_tuples.py  07_slices.py  08_comprehensions.py  09_dictionaries.py  10_functions.py  11_args.py  13_file_io.py  14_cal.py  15_classes.py  1v1.py  CS_lecture_colab_1_1_1v1.ipynb  CS_lecture_colab_1_1_1v2.ipynb  FAQ.md  LICENSE  Lists.py  NOTES.md  Pipfile  Practice_Python_Exercise_2_Odd_or_Even.ipynb  PythonSandbox.ipynb  README.md  Sieve_of_Erathosthenes.py  Untitled.ipynb  afile  assignment.ipynb  bar.text  bar.txt  bash.exe.stackdump  bb_rpsls.py  (+51 more)
..src/: 03_datatypes.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  notebook-checkpoint.ipynb
Exercises_Challenges_From_TK/: README.md
Intro-Python-I/: README.md
Notebooks/: LatLon.py  classes.py  functions.py  median_fetcher.py  store.py
bradys_version/: Item.py  Player.py  Room.py  main.py
class_II/: functions.py  rps.py  rps2.py
guided_practice/: 01_hello_world.py  02_variables_and_types.py  03_lists.py  04_basic_operators.py  05_string_formatting.py  06_basic_string_operations.py  07_conditions.py  08_loops.py  09_functions.py  10_classes_and_objects.py  11_modules.py  12_dictionaries.py  13_list_comprehensions.py  14_tuples.py  15_sets.py
hello/: hello.py
in Class Exercise/: centered_avg.py  rps.py  rps_dry.py
lec_notes/: module_1.py
parallel.playground/: Contents.swift
python-example/: lecture_rps.py
server/: server.py
(+1594 files in other folders)
