[tool.poetry]
name = "intro-python-i"
version = "0.1.0"
description = "Lambda Computer Science Intro to Python"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
